--- a/application/public/app/views/pages/search.html
+++ b/application/public/app/views/pages/search.html
@@ -1,7 +1,6 @@
 <div class="row col-md-6 col-md-offset-3">
 
-	<div class="jumbotron">
-		<h1>All searchs</h1>
+    <div class="jumbotron">
 
         <form ng-submit="search.saveSearch()">
 
@@ -19,19 +18,36 @@
             </button>
 
         </form>
-        
-        <table class="table table-bordered table-striped" ng-show="search.searches">
+
+        <h1>My searches</h1>
+        <table class="table table-bordered table-striped" ng-show="search.mySearches">
             <thead>
             <tr>
                 <th>Query</th>
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="oneSearch in search.searches">
+            <tr ng-repeat="oneSearch in search.mySearches">
                 <td>{{ oneSearch.query }}</td>
             </tr>
             </tbody>
         </table>
+    </div>
 
-</div>
+    <h3>All searches</h3>
+
+    <table class="table table-bordered table-striped" ng-show="search.searches">
+        <thead>
+        <tr>
+            <th>Query</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="oneSearch in search.searches">
+            <td>{{ oneSearch.query }}</td>
+        </tr>
+        </tbody>
+    </table>
+
+
 
