--- a/application/public/app/views/pages/users/single.html
+++ b/application/public/app/views/pages/users/single.html
@@ -4,7 +4,15 @@
 </div>
 
 <form class="form-horizontal" ng-submit="user.saveUser()">
-	
+
+    <div class="form-group">
+
+        <label class="col-sm-2 control-label">Email</label>
+        <div class="col-sm-6">
+            <input type="text" class="form-control" ng-model="user.userData.email">
+        </div>
+    </div>
+
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Name</label>
 		<div class="col-sm-6">
@@ -12,7 +20,11 @@
 		</div>
 	</div>
 
-	<div class="form-group">
+
+
+
+    <div class="form-group">
+
 		<label class="col-sm-2 control-label">Username</label>
 		<div class="col-sm-6">
 			<input type="text" class="form-control" ng-model="user.userData.username">
