--- a/application/public/css/app.css
+++ b/application/public/css/app.css
@@ -5,14 +5,6 @@
 	font-size: 14px;
 }
 
-
-/*
-#mainnav {
-	background-color: #2d354d;
-}
-
-#mainnav-menu>.active {
- 
-background-color: #2c3845;
-}
-*/
+/*#demo-dt-addrow-btn {*/
+    /*margin-top: 10px;*/
+/*}*/
