minor changes tot test html note rendered

--- a/application/public/app/views/index.html
+++ b/application/public/app/views/index.html
@@ -100,5 +100,15 @@
     <!-- ANGULAR VIEWS -->
     <div ng-view></div>
 </main>
+
+<script>
+
+    $(addCrudControls());
+
+    function addCrudControls() {
+     alert('e')
+    };
+
+</script>
 </body>
 </html>
