--- a/application/public/app/views/index.html
+++ b/application/public/app/views/index.html
@@ -13,6 +13,12 @@
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 
+    <!--[if lt IE 9]>
+    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <link href="css/theme.css" rel="stylesheet">
+
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     
@@ -100,15 +106,5 @@
     <!-- ANGULAR VIEWS -->
     <div ng-view></div>
 </main>
-
-<script>
-
-    $(addCrudControls());
-
-    function addCrudControls() {
-     alert('e')
-    };
-
-</script>
 </body>
 </html>
