--- a/application/public/app/views/search-results.html
+++ b/application/public/app/views/search-results.html
@@ -1,4 +1,37 @@
-<div infinite-scroll="myPagingFunction()" infinite-scroll-distance="3"></div>
-<div infinite-scroll="addMoreItems()">
-    <div ng-repeat="item in items">Item number {{$index}}: {{$item}}</div>
+<!--<div infinite-scroll="myPagingFunction()" infinite-scroll-distance="3"></div>-->
+<!--<div infinite-scroll="addMoreItems()">-->
+    <!--<div ng-repeat="item in items">Item number {{$index}}: {{$item}}</div>-->
+<!--</div>-->
+
+<div class="row">
+    <searches ng-repeat="oneSearch in search.searches">
+        <articles ng-repeat="oneArticle in oneSearch.articles">
+            <div class="col-lg-5">
+                <article class="panel">
+                    {{oneArticle.info.query}}
+                    <div class="panel-bg-cover">
+                        <img class="img-responsive" src="{{oneArticle.info.image}}" alt="Image">
+                    </div>
+                    <div class="panel-media">
+                        <img src="{{oneArticle.info.bubble}}" class="panel-media-img img-circle img-border-light" alt="Profile Picture">
+                        <div class="row">
+                            <div class="col-lg-7">
+                                <h3 class="panel-media-heading">{{oneArticle.info.imageTitle}}</h3>
+                                <a href="{{aricle.link1.uri}}" class="btn-link">{{oneArticle.info.link1.label}}</a>
+                                <p class="text-muted mar-btm">{{oneArticle.info.comment}}</p>
+                            </div>
+                            <div class="col-lg-5 text-lg-right">
+                                <button class="btn btn-sm btn-primary">Add Friend</button>
+                                <button class="btn btn-sm btn-mint btn-icon fa fa-envelope icon-lg"></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-body no-padding-top">
+                        <h4>{{oneArticle.info.title}}</h4>
+                        {{oneArticle.info.summary}}
+                    </div>
+                </article>
+            </div>
+        </articles>
+    </searches>
 </div>
