populate articles of user searches (OK)

--- a/application/public/app/views/search-results.html
+++ b/application/public/app/views/search-results.html
@@ -4,7 +4,7 @@
 <!--</div>-->
 
 <div class="row">
-    <searches ng-repeat="oneSearch in search.searches">
+    <searches ng-repeat="oneSearch in search.mySearches">
         <articles ng-repeat="oneArticle in oneSearch.articles">
             <div class="col-lg-5">
                 <article class="panel">
