--- a/application/public/app/views/index.html
+++ b/application/public/app/views/index.html
@@ -63,7 +63,7 @@
             <div class="navbar-collapse collapse" id="navbar-main">
                 <ul class="nav navbar-nav">
                     <li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
-                    <li><a href="/searches"><span class="glyphicon glyphicon-search"></span> Seach</a></li>
+                    <li><a href="/searches/mine"><span class="glyphicon glyphicon-search"></span>My searches</a></li>
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
