--- a/application/public/app/views/test.html
+++ b/application/public/app/views/test.html
@@ -12,7 +12,7 @@
             <span class="fa fa-refresh spinner"></span>
             <p>Loading your note...</p>
         </div>
-        <note   id="note"   width="100%" >{{test.result}}</note>
+        <note id="note">{{test.result}}</note>
     </div>
 
 </test>
